--- a/index.html
+++ b/index.html
@@ -2181,7 +2181,7 @@ function showSummaryPopup() {
     <div class="summary-content row g-3">
       <div class="col-12 col-md-6 col-lg-4">
         <div class="status-card card p-3 mb-2" style="border-left: 4px solid #2196F3">
-          <h3>Total Gullies</h3>
+          <h3 class="mb-2" style="writing-mode:initial;letter-spacing:normal;">Total Gullies</h3>
           <div class="status-count">${summary.total}</div>
           <div class="status-description">Total number of gullies in the system</div>
         </div>
@@ -2191,7 +2191,7 @@ function showSummaryPopup() {
         .map(([status, count]) => `
           <div class="col-12 col-md-6 col-lg-4">
             <div class="status-card card p-3 mb-2" style="border-left: 4px solid ${getStatusColor(status)}">
-              <h3>${status}</h3>
+              <h3 class="mb-2" style="writing-mode:initial;letter-spacing:normal;">${status}</h3>
               <div class="status-count">${count}</div>
               <div class="status-description">${{
                 Clear: 'Gullies that are clean and functioning properly',
