--- a/index.html
+++ b/index.html
@@ -1505,14 +1505,14 @@ function addGullyToMap(latlng, gullyId, layerType = 'gullies', status = 'Unmarke
     });
     marker.on('mouseover', function() {
         if (deleteMode && layerType === 'gullies') {
-            marker.setStyle({ radius: 10 });
+            marker.setStyle({ radius: 10, color: '#000', weight: 2 });
         }
     });
     marker.on('mouseout', function() {
         if (deleteMode && layerType === 'gullies') {
-            marker.setStyle({ radius: 8 });
+            marker.setStyle({ radius: 8, color: '#000', weight: 2 });
         } else if (layerType === 'gullies') {
-            marker.setStyle({ radius: 6 });
+            marker.setStyle({ radius: 6, color: '#000', weight: 2 });
         }
     });
     gullyData.push({ 
@@ -1763,9 +1763,9 @@ function updateMarkerStatus(marker, status, layerType) {
   const options = getMarkerOptions(status);
   marker.setStyle({
     fillColor: options.fillColor,
-    color: options.fillColor, // Same as fill color
-    weight: 0,               // No border
-    fillOpacity: 1,          // Fully opaque
+    color: '#000', // Always black border
+    weight: 2,     // Thicker border
+    fillOpacity: 1,
     opacity: 1
   });
   
@@ -2387,9 +2387,9 @@ function enableDeleteMode() {
     gullyData.forEach(gully => {
         if (gully.marker) {
             if (deleteMode) {
-                gully.marker.setStyle({ radius: 8 });
+                gully.marker.setStyle({ radius: 8, color: '#000', weight: 2 });
             } else {
-                gully.marker.setStyle({ radius: 6 });
+                gully.marker.setStyle({ radius: 6, color: '#000', weight: 2 });
             }
         }
     });
@@ -2422,7 +2422,7 @@ async function handleGullyDelete(gullyId, marker, layerType) {
     try {
         const confirmDelete = confirm('Are you sure you want to delete this gully?');
         if (!confirmDelete) return;
-        marker.setStyle({ fillColor: '#ff0000', radius: 8 });
+        marker.setStyle({ fillColor: '#ff0000', radius: 8, color: '#000', weight: 2 });
         // Remove from Firebase
         await db.ref(`${layerType}/${gullyId}`).remove();
         // Remove from map layer
