--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
       right: auto !important;
       top: 10px;
       z-index: 1000;
-      background: #fff;
-      opacity: 1;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.18);
+      background: #fff !important;
+      opacity: 1 !important;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.25);
       padding: 15px;
       border-radius: 4px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.2);
