--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
       left: 10px !important;
       right: auto !important;
       top: 10px;
-      z-index: 1000;
+      z-index: 2000 !important;
       background: #fff !important;
       opacity: 1 !important;
-      box-shadow: 0 4px 16px rgba(0,0,0,0.25);
-      border: 1px solid #bbb;
-      padding: 15px;
-      border-radius: 4px;
-      min-width: 200px;
+      border: 2px solid #888;
+      padding: 18px 16px 16px 16px;
+      border-radius: 8px;
+      min-width: 220px;
+      box-shadow: 0 6px 24px rgba(0,0,0,0.25);
     }
     .layer-item {
       display: flex;
@@ -2668,11 +2668,8 @@ function createLayerControlContainer() {
   container.style.display = 'block'; // Show by default when created
 
   container.innerHTML = `
-    <div style="margin-bottom:10px;text-align:center;">
-      <h3 id="layer-list-heading" style="margin:0;font-size:1.2em;font-weight:bold;">Layer List</h3>
-    </div>
-    <div class="layer-header" onclick="toggleLayerControl()">
-      <span class="collapse-icon"></span>
+    <div style="margin-bottom:14px;text-align:center;">
+      <span style="font-size:1.3em;font-weight:bold;letter-spacing:0.5px;">Layer List</span>
     </div>
     <div class="layer-content expanded">
       <div class="layer-item">
