--- a/index.html
+++ b/index.html
@@ -715,6 +715,18 @@
       }
     }
   </style>
+  <style>
+body .layer-control {
+  background: #fff !important;
+  box-shadow: 0 6px 24px rgba(0,0,0,0.25) !important;
+  border: 2px solid #888 !important;
+  opacity: 1 !important;
+  color: #222 !important;
+}
+body .layer-control * {
+  opacity: 1 !important;
+}
+  </style>
 </head>
 <body>
 <div id="map" style="width:100vw; height:100vh; min-height:400px;"></div>
