--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@ body .layer-control * {
       <!-- Header Bar -->
       <div class="d-flex align-items-center justify-content-between px-4 py-3" style="background:#fff;border-bottom:1px solid #eee;">
         <div class="d-flex align-items-center gap-3">
-          <img src="https://www.corkcity.ie/en/council-services/council-news/news-2020/cork-city-council-logo.png" alt="Cork City Council Logo" style="height:48px;width:auto;">
+          <img src="https://www.corkcity.ie/en/council-services/public-info/council-logo.png" alt="Cork City Council Logo" style="height:48px;width:auto;">
           <span style="font-size:1.5rem;font-weight:700;letter-spacing:1px;">CORK CITY COUNCIL</span>
         </div>
         <span style="font-size:1.35rem;font-weight:600;">Asset Management System</span>
@@ -753,11 +753,14 @@ body .layer-control * {
               <label for="email" class="form-label" style="font-weight:500;">Username</label>
               <input type="email" id="email" placeholder="Username" class="form-control form-control-lg" autocomplete="username" style="font-size:1.1rem;">
             </div>
-            <div class="mb-3">
+            <div class="mb-3 position-relative">
               <label for="password" class="form-label" style="font-weight:500;">Password</label>
               <input type="password" id="password" placeholder="Password" class="form-control form-control-lg" autocomplete="current-password" style="font-size:1.1rem;">
+              <span class="password-toggle" onclick="togglePassword()" title="Show or hide password" style="position:absolute;right:18px;top:50%;transform:translateY(-50%);cursor:pointer;font-size:1.3rem;color:#888;z-index:2;">
+                <i id="passwordToggleIcon" class="bi bi-eye"></i>
+              </span>
             </div>
-            <button type="submit" class="btn btn-primary btn-lg w-100 mb-2" onclick="login(); return false;" style="font-weight:600;font-size:1.15rem;">Sign In</button>
+            <button type="submit" class="btn btn-primary btn-lg w-100 mb-2" style="font-weight:600;font-size:1.15rem;">Sign In</button>
             <div class="text-start mt-2">
               <a href="#" id="forgotPasswordLink" style="color:#1976D2;text-decoration:underline;cursor:pointer;font-size:1rem;">Forgot password?</a>
             </div>
@@ -2297,13 +2300,13 @@ window.onload = () => {
 
 function togglePassword() {
   const passwordInput = document.getElementById('password');
-  const toggle = document.querySelector('.password-toggle');
+  const icon = document.getElementById('passwordToggleIcon');
   if (passwordInput.type === 'password') {
     passwordInput.type = 'text';
-    toggle.textContent = '👁️‍🗨️';
+    if (icon) { icon.classList.remove('bi-eye'); icon.classList.add('bi-eye-slash'); }
   } else {
     passwordInput.type = 'password';
-    toggle.textContent = '👁️';
+    if (icon) { icon.classList.remove('bi-eye-slash'); icon.classList.add('bi-eye'); }
   }
 }
 
